@@ -5,6 +5,7 @@ import com.ooad.dormitory.entity.*;
 import com.ooad.dormitory.exception.BadRequestException;
 import com.ooad.dormitory.exception.NotFoundException;
 import com.ooad.dormitory.mapper.AuthenticationMapper;
+import com.ooad.dormitory.processor.RequestSender;
 import com.ooad.dormitory.service.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -13,7 +14,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
 
 import java.sql.Timestamp;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -35,6 +38,8 @@ public class DormitorySelectionController {
 
     @Autowired
     private RedisTemplate redisTemplate;
+    @Autowired
+    private RequestSender requestSender;
 
     @Autowired
     public DormitorySelectionController(StudentAccountService studentAccountService, DormitoryService dormitoryService, BuildingService buildingService, RegionService regionService, TeamFavoriteDormService teamFavoriteDormService, AllocationStageService allocationStageService, AllocationRelationService allocationRelationService, TeamService teamService, AuthenticationMapper authenticationMapper, LayoutService layoutService) {
@@ -78,9 +83,15 @@ public class DormitorySelectionController {
 
     @GetMapping("/getFavoriteList")
     public List<Dormitory> getFavoriteDormitories(Integer teamId) {
-
-        return teamFavoriteDormService.list(new QueryWrapper<TeamFavoriteDorm>().eq("team_id", teamId))
-                .stream().map(TeamFavoriteDorm::getDormitory).collect(Collectors.toList());
+        List<Integer> dormitoryIdList = teamFavoriteDormService.list(new QueryWrapper<TeamFavoriteDorm>().eq("team_id", teamId))
+                .stream().map(TeamFavoriteDorm::getDormitoryId).toList();
+        List<Dormitory> dormitoryList = new ArrayList<>();
+        for (Dormitory dormitory :  dormitoryService.getDormitories()) {
+            if (dormitoryIdList.contains(dormitory.getDormitoryId())) {
+                dormitoryList.add(dormitory);
+            }
+        }
+        return dormitoryList;
     }
 
     @GetMapping("/getDormitory")
@@ -96,20 +107,32 @@ public class DormitorySelectionController {
     }
 
     @PostMapping("/favor2")
-    public ResponseEntity<?> favorDormitory2(@RequestBody String studentAccountId, @RequestBody Integer dormitoryId) {
+    public ResponseEntity<?> favorDormitory2(String studentAccountId, Integer dormitoryId) {
         StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
         Dormitory dormitory = dormitoryService.getById(dormitoryId);
-        assert studentAccount != null && dormitory != null;
-
+        if (studentAccount == null || dormitory == null) {
+            throw new BadRequestException("student or dormitory not exist");
+        }
+        if (studentAccount.getTeamId() == null) {
+            throw new BadRequestException("student not in a team");
+        }
 
         // 判断是否是收藏宿舍阶段
         List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
                 .eq("entry_year", studentAccount.calEntryYear())
                 .eq("degree", studentAccount.calDegree())
-                .eq("gender", studentAccount.getGender()));
-        if (allocationStageList.isEmpty() || allocationStageList.get(0).getStage() != 1) {
-            throw new BadRequestException("favor dormitory failed! (wrong stage)");
+                .eq("gender", studentAccount.getGender())
+                .eq("stage", 1));
+        if (allocationStageList.isEmpty()) {
+            throw new BadRequestException("favor dormitory failed! (wrong time)");
         }
+        Timestamp startTime = allocationStageList.get(0).getStartTime();
+        Timestamp endTime = allocationStageList.get(0).getEndTime();
+        Timestamp nowTime = new Timestamp(System.currentTimeMillis());
+        if (nowTime.compareTo(startTime) < 0 || nowTime.compareTo(endTime) > 0) {
+            throw new BadRequestException("favor dormitory failed! (wrong time)");
+        }
+
         // 收藏宿舍
         List<TeamFavoriteDorm> teamFavoriteDormList = teamFavoriteDormService.list(new QueryWrapper<TeamFavoriteDorm>()
                 .eq("team_id", studentAccount.getTeamId())
@@ -122,7 +145,7 @@ public class DormitorySelectionController {
     }
 
     @PostMapping("/select3")
-    public ResponseEntity<?> selectDormitory3(@RequestBody String studentAccountId, @RequestBody Integer dormitoryId) {
+    public ResponseEntity<?> selectDormitory3(Integer studentAccountId, Integer dormitoryId) {
 
         // 获取studentAccount
 //        StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
@@ -148,10 +171,19 @@ public class DormitorySelectionController {
         List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
                 .eq("entry_year", studentAccount.calEntryYear())
                 .eq("degree", studentAccount.calDegree())
-                .eq("gender", studentAccount.getGender()));
-        if (allocationStageList.isEmpty() || allocationStageList.get(0).getStage() != 2) {
-            throw new BadRequestException("select dormitory failed! (wrong stage)");
+                .eq("gender", studentAccount.getGender())
+                .eq("stage", 2));
+        if (allocationStageList.isEmpty()) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
         }
+        Timestamp startTime = allocationStageList.get(0).getStartTime();
+        Timestamp endTime = allocationStageList.get(0).getEndTime();
+        Random random = new Random();  // 用于生成一个随机时间，真实开放选择时间为公布的开放时间加上此随机时间
+        Timestamp nowTime = new Timestamp(System.currentTimeMillis() - random.nextInt(100, 500));
+        if (nowTime.compareTo(startTime) < 0 || nowTime.compareTo(endTime) > 0) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
+        }
+
 
         // 判断本队是否已选宿舍
 //        Team team = teamService.getById(studentAccount.getTeamId());
@@ -188,6 +220,83 @@ public class DormitorySelectionController {
         return ResponseEntity.ok().build();
     }
 
+    @PostMapping("/select")
+    public ResponseEntity<?> selectDormitory4(Integer studentAccountId, Integer dormitoryId) {
+
+        // 获取studentAccount
+//        StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
+        String studentAccountKey = "studentAccount:" + studentAccountId;
+        StudentAccount studentAccount = (StudentAccount) redisTemplate.opsForValue().get(studentAccountKey);
+        if (studentAccount == null) {
+            studentAccount = studentAccountService.getById(studentAccountId);
+            assert studentAccount != null;
+            redisTemplate.opsForValue().set(studentAccountKey, studentAccount);
+        }
+
+        // 获取dormitory
+//        Dormitory dormitory = dormitoryService.getById(dormitoryId);
+        String dormitoryKey = "dormitory:" + dormitoryId;
+        Dormitory dormitory = (Dormitory) redisTemplate.opsForValue().get(dormitoryKey);
+        if (dormitory == null) {
+            dormitory = dormitoryService.getById(dormitoryId);
+            assert dormitory != null;
+            redisTemplate.opsForValue().set(dormitoryKey, dormitory);
+        }
+
+        // 判断是否是选择宿舍阶段
+        List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
+                .eq("entry_year", studentAccount.calEntryYear())
+                .eq("degree", studentAccount.calDegree())
+                .eq("gender", studentAccount.getGender())
+                .eq("stage", 2));
+        if (allocationStageList.isEmpty()) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
+        }
+        Timestamp startTime = allocationStageList.get(0).getStartTime();
+        Timestamp endTime = allocationStageList.get(0).getEndTime();
+        Random random = new Random();  // 用于生成一个随机时间，真实开放选择时间为公布的开放时间加上此随机时间
+        Timestamp nowTime = new Timestamp(System.currentTimeMillis() - random.nextInt(100, 500));
+        if (nowTime.compareTo(startTime) < 0 || nowTime.compareTo(endTime) > 0) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
+        }
+
+
+        // 判断本队是否已选宿舍
+//        Team team = teamService.getById(studentAccount.getTeamId());
+        String teamKey = "team:" + studentAccount.getTeamId();
+        Team team = (Team) redisTemplate.opsForValue().get(teamKey);
+        if (team == null) {
+            team = teamService.getById(studentAccount.getTeamId());
+            assert team != null;
+            redisTemplate.opsForValue().set(teamKey, team);
+        }
+        if (team.getDormitory() != null) {
+            throw new BadRequestException("select dormitory failed! (already has a dormitory)");
+        }
+
+        // 判断该宿舍是否已被选择
+        List<Team> teamList = teamService.list(new QueryWrapper<Team>()
+                .eq("dormitory_id", dormitory.getDormitoryId()));
+        if (!teamList.isEmpty()) {
+            throw new BadRequestException("select dormitory failed! (the dormitory is already selected)");
+        }
+        // 判断该宿舍是否能够选择
+        if (allocationRelationService.list(new QueryWrapper<AllocationRelation>()
+                .eq("entry_year", studentAccount.calEntryYear())
+                .eq("degree", studentAccount.calDegree())
+                .eq("gender", studentAccount.getGender())
+                .eq("dormitory_id", dormitory.getDormitoryId())).isEmpty()) {
+            throw new BadRequestException("select dormitory failed! (not exists this allocation)");
+        }
+        // 选择宿舍
+        team.setDormitoryId(dormitory.getDormitoryId());
+        team.setDormitory(dormitory);
+        requestSender.sendRequest(team.getTeamId() + " " + dormitoryId + " " + team.getOwnerId());
+//        teamService.saveOrUpdate(team);
+//        redisTemplate.opsForValue().set(teamKey, team);
+        return ResponseEntity.ok().build();
+    }
+
     @GetMapping("/getLayout")
     public List<Layout> getLayout(Integer buildingId, @RequestParam(required = false) String roomNumber) {
         List<Dormitory> dormitoryList;
@@ -203,28 +312,28 @@ public class DormitorySelectionController {
         return layoutIdSet.stream().map(layoutService::getById).collect(Collectors.toList());
     }
 
-    @GetMapping("/getStage")
-    public AllocationStage getStage(String studentAccountId) {
-        StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
-        if (studentAccount == null) {
-            throw new NotFoundException("student account not found!");
-        }
-
-        List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
-                .eq("entry_year", studentAccount.calEntryYear())
-                .eq("degree", studentAccount.calDegree())
-                .eq("gender", studentAccount.getGender()));
-        if (allocationStageList.isEmpty()) {
-            return null;
-        }
-        for (AllocationStage allocationStage : allocationStageList) {
-            if (allocationStage.getStartTime().compareTo(new Timestamp(System.currentTimeMillis())) < 0
-                    && allocationStage.getEndTime().compareTo(new Timestamp(System.currentTimeMillis())) > 0) {
-                return allocationStage;
-            }
-        }
-        return null;
-    }
+//    @GetMapping("/getStage")
+//    public AllocationStage getStage(String studentAccountId) {
+//        StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
+//        if (studentAccount == null) {
+//            throw new NotFoundException("student account not found!");
+//        }
+//
+//        List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
+//                .eq("entry_year", studentAccount.calEntryYear())
+//                .eq("degree", studentAccount.calDegree())
+//                .eq("gender", studentAccount.getGender()));
+//        if (allocationStageList.isEmpty()) {
+//            return null;
+//        }
+//        for (AllocationStage allocationStage : allocationStageList) {
+//            if (allocationStage.getStartTime().compareTo(new Timestamp(System.currentTimeMillis())) < 0
+//                    && allocationStage.getEndTime().compareTo(new Timestamp(System.currentTimeMillis())) > 0) {
+//                return allocationStage;
+//            }
+//        }
+//        return null;
+//    }
 
 
     @Deprecated
@@ -251,8 +360,8 @@ public class DormitorySelectionController {
     }
 
     @Deprecated
-    @PostMapping("/select")
-    public ResponseEntity<?> selectDormitory(@RequestBody StudentAccount studentAccount, @RequestBody Dormitory dormitory) {
+    @PostMapping("/select-d")
+    public ResponseEntity<?> selectDormitoryD(@RequestBody StudentAccount studentAccount, @RequestBody Dormitory dormitory) {
 
         // 判断是否是选择宿舍阶段
         List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
@@ -288,22 +397,34 @@ public class DormitorySelectionController {
         return ResponseEntity.ok().build();
     }
 
-    @Deprecated
     @PostMapping("/select2")
-    public ResponseEntity<?> selectDormitory2(@RequestBody String studentAccountId, @RequestBody Integer dormitoryId) {
+    public ResponseEntity<?> selectDormitory2(String studentAccountId, Integer dormitoryId) {
         StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
         Dormitory dormitory = dormitoryService.getById(dormitoryId);
-        assert studentAccount != null && dormitory != null;
-
+        if (studentAccount == null || dormitory == null) {
+            throw new BadRequestException("student or dormitory not exist");
+        }
+        if (studentAccount.getTeamId() == null) {
+            throw new BadRequestException("student not in a team");
+        }
 
         // 判断是否是选择宿舍阶段
         List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
                 .eq("entry_year", studentAccount.calEntryYear())
                 .eq("degree", studentAccount.calDegree())
-                .eq("gender", studentAccount.getGender()));
-        if (allocationStageList.isEmpty() || allocationStageList.get(0).getStage() != 2) {
-            throw new BadRequestException("select dormitory failed! (wrong stage)");
+                .eq("gender", studentAccount.getGender())
+                .eq("stage", 2));
+        if (allocationStageList.isEmpty()) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
         }
+        Timestamp startTime = allocationStageList.get(0).getStartTime();
+        Timestamp endTime = allocationStageList.get(0).getEndTime();
+        Random random = new Random();  // 用于生成一个随机时间，真实开放选择时间为公布的开放时间加上此随机时间
+        Timestamp nowTime = new Timestamp(System.currentTimeMillis() - random.nextInt(100, 500));
+        if (nowTime.compareTo(startTime) < 0 || nowTime.compareTo(endTime) > 0) {
+            throw new BadRequestException("select dormitory failed! (wrong time)");
+        }
+
         // 判断本队是否已选宿舍
         Team team = teamService.getById(studentAccount.getTeamId());
         if (team.getDormitory() != null) {
@@ -328,5 +449,37 @@ public class DormitorySelectionController {
         team.setDormitory(dormitory);
         teamService.saveOrUpdate(team);
         return ResponseEntity.ok().build();
+    }
+
+
+    @Deprecated
+    @PostMapping("/select-test")
+    public ResponseEntity<?> selectDormitory(Integer studentAccountId, Integer dormitoryId) {
+//        System.out.println(studentAccountId + " " + dormitoryId);
+//        Team team = new Team(dormitoryId, dormitoryId, String.valueOf(studentAccountId), null);
+//        requestSender.sendRequest(team.getTeamId() + " " + team.getDormitoryId() + " " + team.getOwnerId());
+        return ResponseEntity.ok().build();
+    }
+
+    @GetMapping("/getStage")
+    public Integer getStage(String studentAccountId){
+        StudentAccount studentAccount = studentAccountService.getById(studentAccountId);
+        if (studentAccount == null) {
+            throw new NotFoundException("student account not found!");
+        }
+        List<AllocationStage> allocationStageList = allocationStageService.list(new QueryWrapper<AllocationStage>()
+                .eq("entry_year", studentAccount.calEntryYear())
+                .eq("degree", studentAccount.calDegree())
+                .eq("gender", studentAccount.getGender()));
+        Integer stage = 0;
+        for (AllocationStage allocationStage : allocationStageList) {
+            if (allocationStage.getStartTime().compareTo(new Timestamp(System.currentTimeMillis())) < 0
+                    && allocationStage.getEndTime().compareTo(new Timestamp(System.currentTimeMillis())) > 0) {
+               if (allocationStage.getStage() > stage) {
+                   stage = allocationStage.getStage();
+               }
+            }
+        }
+        return stage;
     }
 }
